--- a/app/globals.css
+++ b/app/globals.css
@@ -17,13 +17,16 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: #9097a2;
   background: rgb(var(--background-start-rgb));
   min-height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+button {
+  color: #fff;
 }
 
 .main-loading {
